--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,17 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "bogardo/mailgun": "^5.0",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "jdtsoftware/laravel-email-templates": "^0.3.2",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.6",
-        "league/csv": "8.0"
+        "league/csv": "8.0",
+        "mailgun/mailgun-php": "^2.6",
+        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/message": "^1.7"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
